<resources>
    <string name="app_name">Calculadora</string>
    <string name="Num1">1</string>
    <string name="Num2">2</string>
    <string name="Num3">3</string>
    <string name="Num4">4</string>
    <string name="Num5">5</string>
    <string name="Num6">6</string>
    <string name="Num7">7</string>
    <string name="Num8">8</string>
    <string name="Num9">9</string>
    <string name="Num0">0</string>
    <string name="igual">=</string>
    <string name="punto">.</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="por">*</string>
    <string name="dividir">/</string>
    <string name="Valor"> </string>
    <string name="borrar">C</string>
    />
</resources>
