<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvValor"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="30dp"
        android:gravity="right|center_vertical"
        android:textColor="@color/numero"
        android:textSize="30sp" />


    <Button
        android:id="@+id/b_ce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@color/numero"
        android:text="@string/borrar"
        android:textColor="@android:color/background_light"
        android:textSize="24sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="3dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv1_1"
                style="@style/ActionButtonStyle"
                android:text="@string/Num1" />

            <TextView
                android:id="@+id/tv1_2"
                style="@style/ActionButtonStyle"

                android:text="@string/Num2" />

            <TextView
                android:id="@+id/tv1_3"
                style="@style/ActionButtonStyle"

                android:text="@string/Num3" />

            <TextView
                android:id="@+id/tv1_4"
                style="@style/ActionButtonStyle"
                android:text="@string/mas" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv2_1"
                style="@style/ActionButtonStyle"
                android:text="@string/Num4" />

            <TextView
                android:id="@+id/tv2_2"
                style="@style/ActionButtonStyle"
                android:text="@string/Num5" />

            <TextView
                android:id="@+id/tv2_3"
                style="@style/ActionButtonStyle"
                android:text="@string/Num6" />

            <TextView
                android:id="@+id/tv2_4"
                style="@style/ActionButtonStyle"
                android:text="@string/menos" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">" >

            <TextView
                android:id="@+id/tv3_1"
                style="@style/ActionButtonStyle"
                android:text="@string/Num7" />

            <TextView
                android:id="@+id/tv3_2"
                style="@style/ActionButtonStyle"
                android:text="@string/Num8" />

            <TextView
                android:id="@+id/tv3_3"
                style="@style/ActionButtonStyle"
                android:text="@string/Num9" />

            <TextView
                android:id="@+id/tv3_4"
                style="@style/ActionButtonStyle"
                android:text="@string/por" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">>

            <TextView
                android:id="@+id/tv4_1"
                style="@style/ActionButtonStyle"
                android:text="@string/punto" />

            <TextView
                android:id="@+id/tv4_2"
                style="@style/ActionButtonStyle"
                android:text="@string/Num0" />

            <TextView
                android:id="@+id/tv4_3"
                style="@style/ActionButtonStyle"
                android:text="@string/igual" />

            <TextView
                android:id="@+id/tv4_4"
                style="@style/ActionButtonStyle"
                android:text="@string/dividir" />

        </TableRow>
    </TableLayout>

</LinearLayout>